# StarPolymersMD

./: .gitignore  Executer.py  averages.py  cumulative_average.py  parameters.py  params.py  runExecuter.py  runTempl.sh  submit.py  submitJobs.py
results/: averages_dir.py  plot.py  plot_MPC_tests.py  plot_equil.py  streamlines.py  velocity_autocorrelation.py
results/streamline_test/: streamline_example.py
star-polymers/: CMakeLists.txt
star-polymers/lib/: Analysis.h  Andersen.cpp  Andersen.h  Box.cpp  Box.h  CMakeLists.txt  Cluster.h  Function_Output.cpp  Functions.h  Hydrodynamics.cpp  Lowe_Andersen.cpp  Lowe_Andersen.h  MPC.cpp  MPC.h  MatVec.cpp  MatVec.h  Molecule.cpp  Molecule.h  Nose_Hoover.cpp  Nose_Hoover.h  Particle.cpp  Particle.h  Potentials.h  Rand.cpp  Rand.h  RandDist.cpp  RandDist.h  Thermostat.cpp  Thermostat.h  Thermostat_None.cpp  Thermostat_None.h  Velocity_x.h
star-polymers/lib/Analysis/: CMakeLists.txt  Fourier_Autocorr.h  Function_Output.cpp  Function_Output.h  Streamlines.cpp  Streamlines.h  Vel_Autocorr.h  Vel_Autocorr_Fluid.h  Vel_distribution.h  Velocity_x.h
star-polymers/lib/Hydrodynamics/: CMakeLists.txt  Hydrodynamics.cpp  Hydrodynamics.h  Hydrodynamics_None.h  MPC.cpp  MPC.h
star-polymers/lib/Molecules/: CMakeLists.txt  Molecule.cpp  Molecule.h  Potentials.h
star-polymers/lib/Thermostats/: Andersen.cpp  Andersen.h  Andersen_stochastic.cpp  Andersen_stochastic.h  CMakeLists.txt  Lowe_Andersen.cpp  Lowe_Andersen.h  Nose_Hoover.cpp  Nose_Hoover.h  Thermostat.cpp  Thermostat.h  Thermostat_None.cpp  Thermostat_None.h
star-polymers/src/: CMakeLists.txt  Streamlines.cpp  continue_star_polymers.cpp  gaussian_chain.cpp  mpc_test.cpp  shear.cpp  star-polymers.cpp  streamline_calculation.cpp
